--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -1,17 +1,80 @@
 @tailwind base;
-
-h1 {
-  @apply text-2xl;
-}
-h2 {
-  @apply text-xl;
-}
-h3 {
-  @apply text-lg;
-}
-a {
-  @apply text-blue-600;
-}
-
 @tailwind components;
 @tailwind utilities;
+
+/* Heading Styles */
+h1 {
+  @apply text-2xl my-12 py-2 text-gray-800;
+}
+h2 {
+  @apply text-xl my-3 py-1 text-gray-700;
+}
+h3 {
+  @apply text-lg my-2 py-1 text-gray-600;
+}
+
+/* Paragraph Styles */
+p {
+  @apply text-base leading-relaxed text-gray-700 my-4;
+}
+
+/* Unordered List Styles */
+ul {
+  @apply list-disc list-inside my-4;
+}
+
+/* Ordered List Styles */
+ol {
+  @apply list-decimal list-inside my-4;
+}
+
+/* List Item Styles */
+li {
+  @apply mb-2 ml-4;
+}
+
+/* Anchor Tag Styles */
+a {
+  @apply text-sky-900;
+}
+
+/* Links within Paragraphs */
+p a {
+  @apply text-sky-950 underline;
+}
+
+/* Blockquote Styles */
+blockquote {
+  @apply p-4 italic border-l-4 bg-gray-100 text-gray-600 border-gray-500 my-4;
+}
+
+/* Button Styles */
+button {
+  @apply px-4 py-2 bg-gray-400 text-white font-semibold rounded-lg shadow-md hover:bg-gray-200 my-2;
+}
+
+/* Image Styles */
+img {
+  @apply max-w-full h-auto my-4;
+}
+
+/* Table Styles */
+table {
+  @apply min-w-full divide-y divide-gray-200 my-4;
+}
+
+th, td {
+  @apply px-6 py-4 text-left text-xs font-medium text-gray-500 uppercase tracking-wider;
+}
+
+/* Form Element Styles */
+input, textarea, select {
+  @apply mb-3 px-3 py-2 border rounded-md;
+}
+
+@media (max-width: 639px) {
+  .mobile-square {
+    aspect-ratio: 2 / 1;
+    object-fit: cover; /* Optional: for better image handling */
+  }
+}
